<resources>
    <string name="app_name">Yupivoy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Strings del Drawer -->
    <string name="drawer_inicio">Inicio</string>
    <string name="drawer_quienes_somos">¿Quiénes somos?</string>
    <string name="drawer_porque_elegir">¿Porqué elegir Yupivoy</string>
    <string name="drawer_contacto">Contacto</string>
    <string name="drawer_califica_aplicacion">Califica nuestra aplicacion</string>

    <!-- Menu principal -->
    <string name="mp_cotiza_tu_viaje">Cotiza tu viaje con nosotros.</string>
    <string name="mp_hotel">Hotel</string>
    <string name="mp_avion">Avión</string>
    <string name="mp_hotel_avion">Hotel + Avión</string>

    <!-- Activity Quienes somos -->
    <string name="quienes_somos_titulo">¿Quiénes somos?</string>
    <string name="quienes_somos_parrafo">
        Yupivoy surge como una opción para cotizar y reservar viajes de negocio o placer mediante un esquema de
        formulario de viaje on-line, creada en 2014, especializados en reservación de hotelería y avión en todo el mundo.
        \n\nBuscamos brindar un servicio que cubra las necesidades para tu próxima visita turística o de negocios
        teniendo la alternativa a que elijas lo que mas te convenga mediante un formulario que nos permitirá buscar
        y proporcionar el mejor escenario en precio a tu medida.
        \n\nLa aceptación de un formulario nos ha brindado la experiencia de tener satisfechos a nuestros clientes con un
        precio favorable debido a que buscamos los mejores rates de precio en hotelería y avión en un lapso de tiempo
        de 24 hrs que es recompensada al momento en recibir la oferta.
    </string>
    <string name="cotizamos_texto">
        Te cotizamos y reservamos con la tarifa más económica
    </string>

    <!-- Activity Porque elegir Yupivoy -->
    <string name="porque_elegir_titulo">¿Por qué elegir Yupivoy?</string>
    <string name="porque_elegir_parrafo">
        Brinda un sistema amigable Online para llenar tus requerimiento de tu próximo viaje, con la garantía que en
        24 horas recibirás una oferta adecuada a tus necesidades y presupuesto.
        \n\nTe ofrecemos:
        \nLa mejor tarifa comparada en el mercado.
        \nFormas de pago adaptadas a tu necesidad.
        \nCancelaciones Gratuitas en muchos de los casos.
        \nExperiencia en el ramo turístico.
        \nSistema interactivo amigable para reservaciones.
        \n\nFormas de Pago:
        \n1.- Por medio de transferencia electrónica mediante pago directo en una sola exhibición.
        \n2.- Por depósito a cuenta bancaria mediante pagos a meses sin intereses.
    </string>
    <string name="recuerda_formulario_text">
        Recuerda somos ¡Tu formulario de Viaje! Tu eliges que te conviene
    </string>

    <!-- Activity Contacto -->
    <string name="contacto_titulo">Contacto</string>
    <string name="contacto_nombre">Nombre</string>
    <string name="contacto_correo">Correo</string>
    <string name="contacto_telefono">Teléfono</string>
    <string name="contacto_comentarios">Comentarios</string>
    <string name="contacto_informacion_yupivoy">
        MATRIZ
        \n\nAve.Ricardo Margáin #575
        \nEdificio C.
        \nParque Corp. Sta. Engracia,
        \nSan Pedro Garza García. N.L.
        \nC.P. 66267
        \nTurismo Reg. 04190190174

        \n\nINFORMES

        \n\nT. +52 (81) 8000.7412
        \nF. +52 (81) 8000.7091
        \nE. info@yupivoy.com
        \nW. www.yupivoy.com
    </string>

    <!-- Strings para los botones -->
    <string name="boton_enviar">ENVIAR</string>
    <string name="boton_buscar">BUSCAR</string>

    <!-- Strings para los titulos de los Formularios -->
    <string name="frmlr_titulo_hotel">Hotel</string>
    <string name="frmlr_titulo_avion">Avión</string>
    <string name="frmlr_titulo_hotel_avion">Hotel - Avión</string>
    <string name="frmlr_titulo_traslados">Traslados</string>
    <string name="frmlr_titulo_autos">Autos</string>

    <!-- Strings para los Formularios -->
    <!-- Hotel -->
    <string name="frmlr_presupuesto">Presupuesto</string>
    <string name="frmlr_hotel">Hotel</string>
    <string name="frmlr_tipo_hotel">Tipo de hotel</string>
    <string name="frmlr_plan_habitacion">Plan de habitacion</string>
    <string name="frmlr_tipo_habitacion">Tipo de habitacion</string>
    <string name="frmlr_edad_ninos">Edad niños</string>

    <!-- Avion -->
    <string name="frmlr_ida_y_vuelta">Ida y vuelta (Redondo)</string>
    <string name="frmlr_ida_o_vuelta">Ida ó vuelta (Sencillo)</string>
    <string name="frmlr_aeropuerto_salida">Aeropuerto de Salida</string>
    <string name="frmlr_vuelos_directos">Vuelos Directos</string>
    <string name="frmlr_clase">Clase</string>
    <string name="frmlr_compania_aerea">Compañia Aérea</string>
    <string name="frmlr_bebes">Bebés (0-23 meses)</string>
    <string name="frmlr_seguro_vuelo">Seguro protección de vuelo</string>
    <string name="frmlr_vip_abordar">VIP - No filas - Primeros en abordar</string>


    <!-- Traslados -->
    <string name="frmlr_tipo_traslado">Tipo de traslado</string>
    <string name="frmlr_aeropuerto_llegada">Aeropuerto de llegada</string>
    <string name="frmlr_zona_llegada">Zona de llegada</string>
    <string name="frmlr_fecha_llegada">Fecha de llegada</string>
    <string name="frmlr_llegada_vuelo">Llegada vuelo (ida)</string>
    <string name="frmlr_ida_vuelta">Ida - Vuelta</string>
    <string name="frmlr_si">Si</string>
    <string name="frmlr_no">No</string>
    <string name="frmlr_fecha_vuelta">Fecha de vuelta</string>
    <string name="frmlr_salida_vuelo">Salida vuelo (vuelta)</string>

    <!-- Autos -->
    <string name="frmlr_pais">Pais</string>
    <string name="frmlr_ciudad">Ciudad</string>
    <string name="frmlr_lugar">Lugar</string>
    <string name="frmlr_devolver_coche_oficina">Devolver el coche en la misma oficina</string>
    <string name="frmlr_fecha_hora_recogida">Fecha y hora de recogida</string>
    <string name="frmlr_fecha_hora_devolucion">Fecha y hora de devolucion</string>
    <string name="frmlr_edad_conductor">Edad del conductor</string>
    <string name="frmlr_edad_entre">¿Entre 25 y 70?</string>

    <!-- Globales -->
    <string name="frmlr_modo_pago">Modo de pago</string>
    <string name="frmlr_destino">Destino</string>
    <string name="frmlr_fecha_entrada">Fecha de entrada</string>
    <string name="frmlr_fecha_salida">Fecha de salida</string>
    <string name="frmlr_noches">Noches</string>
    <string name="frmlr_fechas_flexibles">Fechas flexibles ¡Quiero ahorrar!</string>
    <string name="frmlr_adultos">Adultos (+12 años)</string>
    <string name="frmlr_ninos">Niños (2-11 años)</string>
    <string name="frmlr_transporte_aeropuerto_hotel">Transporte Aeropuerto-Hotel</string>
    <string name="frmlr_renta_de_carro">Renta de carro</string>
    <string name="frmlr_seleccionar_fecha">Seleccionar fecha...</string>

    <!-- Sring arrays para los spinners de: Hotel y Avion -->
    <string-array name="frmlr_hotel_avion_presupuesto_spinner_array">
        <item>Seleccionar</item>
        <item>$10,000 a $15,000</item>
        <item>$15,000 a $20,000</item>
        <item>$20,000 a $30,000</item>
        <item>$30,000 a $50,000</item>
        <item>$50,000 a $70,000</item>
        <item>$70,000 a $100,000</item>
        <item>$100,000 a $200,000</item>
    </string-array>

    <string-array name="frmlr_hotel_avion_modo_pago_spinner_array">
        <item>Seleccionar</item>
        <item>Efectivo</item>
        <item>Tarjeta de credito</item>
    </string-array>

    <string-array name="frmlr_hotel_avion_tipo_hotel_array">
        <item>Seleccionar</item>
        <item>Sólo adultos</item>
        <item>Familiar</item>
    </string-array>

    <string-array name="frmlr_hotel_avion_plan_habitacion_array">
        <item>Seleccionar</item>
        <item>Todo incluído</item>
        <item>Sólo Desayuno</item>
        <item>Sólo Hospedaje</item>
        <item>Cocineta</item>
        <item>Servicio al cuarto</item>
    </string-array>

    <string-array name="frmlr_hotel_avion_tipo_habitacion_array">
        <item>Seleccionar</item>
        <item>Estándar</item>
        <item>Vista al mar</item>
    </string-array>

    <string-array name="frmlr_hotel_avion_clase_avion_array">
        <item>Seleccionar</item>
        <item>Cualquiera</item>
        <item>Económica</item>
        <item>Primera Clase</item>
    </string-array>

    <string-array name="frmlr_hotel_avion_compañia_aerea_array">
        <item>Seleccionar</item>
        <item>Cualquiera</item>
        <item>Viva Aerobus</item>
        <item>Volaris</item>
        <item>Interjet</item>
        <item>Magnicharters</item>
        <item>Aeroméxico</item>
    </string-array>
    <!-- Strings de los subtitulos para los Formularios -->
    <!-- Hotel -->
    <string name="frmlr_sub_donde_quieres_ir">¿A dónde quieres ir?</string>
    <string name="frmlr_sub_hotel_especial">¿Algún hotel en especial?</string>
    <string name="frmlr_sub_fecha_hospedaje">Fecha de hospedaje</string>
    <string name="frmlr_sub_hospedan_habitacion">¿Cuántos se hospedan por habitación?</string>
    <string name="frmlr_sub_alguna_preferencia_hotel">¿Tiene alguna preferencia de Hotel?</string>
    <!-- Avion -->
    <string name="frmlr_sub_donde_vas">¿A dónde vas?</string>
    <string name="frmlr_sub_cuando_salir">¿Cuándo quieres salir?</string>
    <string name="frmlr_sub_cuantos_viajan">¿Cuántos viajan?</string>
    <string name="frmlr_sub_alguna_preferencia_avion">¿Tiene alguna preferencia de Avión?</string>

    <!-- Globales -->
    <string name="frmlr_sub_alguna_preferencia">¿Tiene alguna preferencia?</string>
    <string name="frmlr_sub_opcion_especial">¿Algúna opción especial?</string>
    <string name="frmlr_sub_comentarios">Comentarios</string>

    <!-- Fonts -->
    <string name="font_roboto_regular">sans-serif</string>
    <string name="font_roboto_light">sans-serif-light</string>
    <string name="font_roboto_condensed">sans-serif-condensed</string>
    <string name="font_roboto_black">sans-serif-black</string>
    <string name="font_roboto_thin">sans-serif-thin</string>
    <string name="font_roboto_medium">sans-serif-medium</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
