<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.FormularioTraslados">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:focusableInTouchMode="true"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:text="@string/frmlr_titulo_traslados"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/frmlr_tipo_traslado"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/frmlr_aeropuerto_llegada"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/frmlr_zona_llegada"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
            <!-- SECCION DE FECHA HOSPEDAJE -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_weight="2"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/frmlr_fecha_llegada"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Fecha 1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_weight="2"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/frmlr_llegada_vuelo"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Spinner
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                        </Spinner>
                        <Spinner
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">
                        </Spinner>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
            <!-- FIN SECCION DE FECHA HOSPEDAJE -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/frmlr_adultos"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/frmlr_ninos"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/frmlr_bebes"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:backgroundTint="@color/yupiRosa"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:background="@drawable/border_button"
                android:text="@string/boton_buscar"/>
        </LinearLayout>
    </ScrollView>

</FrameLayout>
